--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-runtime": "^6.26.0",
+    "file-loader": "^3.0.1",
     "react-router-dom": "^4.2.2",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.1.1",
