--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "classnames": "^2.2.6",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.8.3",
     "prop-types": "^15.7.2",
     "react": "^16.3.1",
@@ -29,7 +31,8 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^7.0.1",
     "socket.io-client": "^2.2.0",
-    "style-loader": "^0.20.3"
+    "style-loader": "^0.20.3",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
