--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-bootstrap4-modal": "^1.7.0",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
+    "react-responsive-modal": "^3.6.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
