--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.3.1",
     "react-bootstrap4-modal": "^1.7.0",
+    "react-datepicker": "^2.3.0",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-responsive-modal": "^3.6.0",
