--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "webpack-dev-server",
     "build": "webpack --config webpack.build.config.js"
   },
+  "engines": {
+    "node": "8.11.4",
+    "npm": "5.6.0"
+  },
   "dependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.3.4",
