--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-rater": "^5.0.5",
     "react-redux": "^5.0.7",
     "react-responsive-modal": "^3.6.0",
+    "react-stars": "^2.2.5",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
