finished career static pages

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "html-webpack-plugin": "^3.2.0",
     "moment": "^2.24.0",
     "node-sass": "^4.8.3",
+    "nuka-carousel": "^4.5.3",
     "prop-types": "^15.7.2",
     "react": "^16.3.1",
     "react-bootstrap4-modal": "^1.7.0",
