--- a/package.json
+++ b/package.json
@@ -42,14 +42,17 @@
     "ignore-styles": "^5.0.1",
     "moment": "^2.24.0",
     "node-sass": "^4.8.3",
+    "nuka-carousel": "^4.5.3",
     "prop-types": "^15.7.2",
     "react": "^16.3.1",
     "react-bootstrap4-modal": "^1.7.0",
     "react-datepicker": "^2.3.0",
     "react-dom": "^16.3.1",
+    "react-rater": "^5.0.5",
     "react-redux": "^5.0.7",
     "react-responsive-modal": "^3.6.0",
     "react-router-config": "^5.0.0",
+    "react-stars": "^2.2.5",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
